// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> renders correctly 1`] = `
.css-1olcu4g,
[data-css-1olcu4g] {
  -webkit-flex-basis: auto;
  -ms-preferred-size: auto;
  flex-basis: auto;
  padding: -webkit-calc(0.5 * 0);
  padding: -moz-calc(0.5 * 0);
  padding: calc(0.5 * 0);
  width: -webkit-calc(100% * 1);
  width: -moz-calc(100% * 1);
  width: calc(100% * 1);
}

<div
  className="css-1olcu4g"
/>
`;

exports[`<Cell /> renders correctly with gutter 1`] = `
.css-ptw020,
[data-css-ptw020] {
  -webkit-flex-basis: auto;
  -ms-preferred-size: auto;
  flex-basis: auto;
  padding: -webkit-calc(0.5 * 10px);
  padding: -moz-calc(0.5 * 10px);
  padding: calc(0.5 * 10px);
  width: -webkit-calc(100% * 1);
  width: -moz-calc(100% * 1);
  width: calc(100% * 1);
}

<div
  className="css-ptw020"
/>
`;

exports[`<Cell /> renders correctly with lg 1`] = `
.css-1olcu4g,
[data-css-1olcu4g] {
  -webkit-flex-basis: auto;
  -ms-preferred-size: auto;
  flex-basis: auto;
  padding: -webkit-calc(0.5 * 0);
  padding: -moz-calc(0.5 * 0);
  padding: calc(0.5 * 0);
  width: -webkit-calc(100% * 1);
  width: -moz-calc(100% * 1);
  width: calc(100% * 1);
}

<div
  className="css-1olcu4g"
/>
`;

exports[`<Cell /> renders correctly with md 1`] = `
.css-1olcu4g,
[data-css-1olcu4g] {
  -webkit-flex-basis: auto;
  -ms-preferred-size: auto;
  flex-basis: auto;
  padding: -webkit-calc(0.5 * 0);
  padding: -moz-calc(0.5 * 0);
  padding: calc(0.5 * 0);
  width: -webkit-calc(100% * 1);
  width: -moz-calc(100% * 1);
  width: calc(100% * 1);
}

<div
  className="css-1olcu4g"
/>
`;

exports[`<Cell /> renders correctly with sm 1`] = `
.css-1olcu4g,
[data-css-1olcu4g] {
  -webkit-flex-basis: auto;
  -ms-preferred-size: auto;
  flex-basis: auto;
  padding: -webkit-calc(0.5 * 0);
  padding: -moz-calc(0.5 * 0);
  padding: calc(0.5 * 0);
  width: -webkit-calc(100% * 1);
  width: -moz-calc(100% * 1);
  width: calc(100% * 1);
}

<div
  className="css-1olcu4g"
/>
`;
